--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,11 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="비대면 주문시스템을 도입하고 싶으신가요? QR오더로 쉽고 간편하게 온라인 메뉴판을 제작하고 비대면 주문시스템을 도입해보세요. 저희가 다 해드립니다."
     />
+    <meta property="og:title" content="QR오더 | 비대면 주문시스템">
+    <meta property="og:description" content="비대면 주문시스템을 도입하고 싶으신가요? QR오더로 쉽고 간편하게 온라인 메뉴판을 제작하고 비대면 주문시스템을 도입해보세요. 저희가 다 해드립니다.">
+    <meta property="og:site_name" content="QR오더">
+    <title>QR오더 | 비대면 주문시스템</title>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
